my-apps/privacy/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "search.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          port: 8080
